fix: List to ArrayList