@@ -8,10 +8,10 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class LottoTickets {
-    private final List<Lotto> lottos;
+    private final ArrayList<Lotto> lottos;
     private static final List<LottoNumber> ALL_NUMBERS = IntStream.rangeClosed(1, 45)
             .mapToObj(LottoNumber::new)
-            .collect(Collectors.toList());
+            .toList();
 
     public LottoTickets(Money money) {
         int count = money.availableLottoCount();
